# elapsed

./: .clang-format  .clangd  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  elapsed-config.cmake.in  elapsed.c  example.c  fatal.c  fatal.h  install-deps  os.c  os.h  platform.h  posix_time.h  sleep.c  sleep.h  test_elapsed.c  timespec.c  timespec.h
.github/workflows/: cmake.yml  deploy.yml  test.yml
include/elapsed/: elapsed.h  export.h
src/: elapsed.c  fatal.h  os.c  os.h
src/elapsed/: elapsed.h
test/: CMakeLists.txt  cass.h  elapsed.c  elapsed_perf.c
