find_package(hope REQUIRED)
add_executable(test_elapsed elapsed.c)
target_link_libraries(test_elapsed PRIVATE ELAPSED::elapsed)
target_link_libraries(test_elapsed PRIVATE HOPE::hope)
target_compile_options(test_elapsed PRIVATE ${WARNING_FLAGS})
target_compile_features(test_elapsed PRIVATE c_std_11)
add_test(NAME elapsed COMMAND test_elapsed)
