macro(inject_dll_to_please_windows)
  file(TO_CMAKE_PATH "$ENV{PATH}" PATH)
  list(APPEND PATH $<TARGET_FILE_DIR:ELAPSED::elapsed>)
  string(REPLACE ";" "\\;" PATH "${PATH}")
  set_tests_properties(${name} PROPERTIES ENVIRONMENT "PATH=${PATH}")
endmacro()

find_package(hope REQUIRED)
add_executable(test_elapsed elapsed.c)
target_link_libraries(test_elapsed PRIVATE ELAPSED::elapsed)
target_link_libraries(test_elapsed PRIVATE HOPE::hope)
target_compile_options(test_elapsed PRIVATE ${WARNING_FLAGS})
target_compile_features(test_elapsed PRIVATE c_std_11)
inject_dll_to_please_windows()
add_test(NAME elapsed COMMAND test_elapsed)
