macro(inject_dll_to_please_windows test_name)
  file(TO_CMAKE_PATH "$ENV{PATH}" PATH)
  list(APPEND PATH $<TARGET_FILE_DIR:ELAPSED::elapsed>)
  string(REPLACE ";" "\\;" PATH "${PATH}")
  set_tests_properties(${test_name} PROPERTIES ENVIRONMENT "PATH=${PATH}")
endmacro()

add_executable(test_elapsed elapsed.c)
target_link_libraries(test_elapsed PRIVATE ELAPSED::elapsed)
target_compile_options(test_elapsed PRIVATE ${WARNING_FLAGS})
target_compile_features(test_elapsed PRIVATE c_std_11)
add_test(NAME elapsed COMMAND test_elapsed)
inject_dll_to_please_windows(elapsed)
